test/e2e/fail_compile/type_errors/plain_call_runtime_return_demotion.cst
runtime fn source() -> num { 41 }

fn increment(value: num) -> num { value + 1 }

fn main() -> num {
    increment(source())
}
